objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HackathonTestField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HackathonTestField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <label>Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__One2OneContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary contact for the Account, or the One2One contact for a One2One account.</description>
        <inlineHelpText>The primary contact for the Account, or the One2One contact for a One2One account.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe01__SYSTEMIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden system field: do not change.  Updated by automatic processes.</description>
        <inlineHelpText>Indicates whether or not this Account is special for Contacts (Household, One-to-One, Individual) vs a normal Account.</inlineHelpText>
        <label>_SYSTEM: IsIndividual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__SYSTEM_AccountType__c</fullName>
        <description>Hidden system field: do not change.  Updated by automatic processes.</description>
        <inlineHelpText>Indicates which Account Model this account is for: Household Account, One-to-One, or Individual (bucket).</inlineHelpText>
        <label>_SYSTEM: AccountType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>System field: do not change. Updated by automatic processes.</description>
        <inlineHelpText>Average won Opportunity amount related to this Account.  Updated automatically.</inlineHelpText>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year_Total__c</fullName>
        <inlineHelpText>The sum of won Opportunity amounts in the Best Gift Year for this Account.</inlineHelpText>
        <label>Best Gift Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year__c</fullName>
        <inlineHelpText>The year in which the largest total amount of won Opportunities related to this Account occurred.  See also Best Gift Year Total.</inlineHelpText>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <inlineHelpText>The earliest won Opportunity (by Close Date) with amount greater than zero related to this Account.</inlineHelpText>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Formal_Greeting__c</fullName>
        <inlineHelpText>For Household Accounts, uses fields of non-excluded, ordered related Contacts. Generated automatically.</inlineHelpText>
        <label>Formal Greeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npo02__HouseholdPhone__c</fullName>
        <label>Household Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npo02__Informal_Greeting__c</fullName>
        <inlineHelpText>For Household Accounts, uses fields of non-excluded, ordered related Contacts. Generated automatically.</inlineHelpText>
        <label>Informal Greeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npo02__LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <inlineHelpText>The largest amount of a won Opportunity related to this Account.</inlineHelpText>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <inlineHelpText>The most recent Close Date of a won Opportunity related to this Account with amount greater than zero.</inlineHelpText>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <inlineHelpText>The amount of the most recent (by Close Date) won Membership Opportunity (by Record Type) for this Account.</inlineHelpText>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <inlineHelpText>The most recent Close Date of a won Membership Opportunity (by Record Type) related to this Account.</inlineHelpText>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipLevel__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <inlineHelpText>Membership level from most recent (by Close Date) won Membership Opportunity (by Record Type) related to this Account.&quot;</inlineHelpText>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipOrigin__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <inlineHelpText>Membership &quot;origin&quot; (new, renew...) from most recent (by Close Date) won Membership Opportunity (by Record Type) related to this Account.</inlineHelpText>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <inlineHelpText>The amount of the most recent won Opportunity (by Close Date) with amount greater than zero related to this Account.</inlineHelpText>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipEndDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <inlineHelpText>Membership end date from most recent (by Close Date) won Membership Opportunity (by Record Type) related to this Account.</inlineHelpText>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipJoinDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <inlineHelpText>Membership start date from most recent (by Close Date) won Membership Opportunity (by Record Type) related to this Account.</inlineHelpText>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfClosedOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <inlineHelpText>The total number of won Opportunities  related to this Account.</inlineHelpText>
        <label>Total Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfMembershipOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <inlineHelpText>The total number of won Membership Opportunities (Record Type) related to this Account.</inlineHelpText>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmount2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <inlineHelpText>The total amount of won Opportunities related to this Account, closed within the year or fiscal year preceding last year (see Household Settings).</inlineHelpText>
        <label>Total Gifts Two Years Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <inlineHelpText>The total amount of won Opportunities related to this Account, closed in the last number of days defined in Household Settings.</inlineHelpText>
        <label>Total Gifts Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <inlineHelpText>The total amount of won Opportunities related to this Account, closed in the current year or fiscal year.</inlineHelpText>
        <label>Total Gifts Last Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <inlineHelpText>The total amount of won Opportunities related to this Account, closed in the current year or fiscal year.</inlineHelpText>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Account, closed within the year or fiscal year preceding last year.</inlineHelpText>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <inlineHelpText>The total amount of won Opportunities related to this Account, closed in the last number of days defined in Household Settings.</inlineHelpText>
        <label>Number of Gifts Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Account, closed in the previous year or fiscal year (see Household Settings).</inlineHelpText>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Account, closed in the current year or fiscal year (see Household Settings).</inlineHelpText>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__SYSTEM_CUSTOM_NAMING__c</fullName>
        <inlineHelpText>For Household Accounts, specifies which name related fields should not be automatically populated by the Householding code.</inlineHelpText>
        <label>_SYSTEM: CUSTOM NAMING</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Formal_Greeting__c</fullName>
                </value>
                <value>
                    <fullName>Informal_Greeting__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npo02__SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <inlineHelpText>The smallest non-zero amount of a won Opportunity related to this Account.</inlineHelpText>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <inlineHelpText>The total amount of won Membership Opportunities (Record Type) related to this Account.</inlineHelpText>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <inlineHelpText>The sum of amounts of all won Opportunities related to this Account.</inlineHelpText>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__All_Members_Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, all members of this household are deceased. Do not update this field manually. It&apos;s updated automatically by NPSP as a result of updates to the Deceased checkbox on household member Contacts.</description>
        <inlineHelpText>If selected, all members of this household are deceased. Do not update this field manually. It&apos;s updated automatically by NPSP as a result of updates to the Deceased checkbox on household member Contacts.</inlineHelpText>
        <label>All Household Members Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The batch this Account was created in.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__CustomizableRollups_UseSkewMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Customizable Rollups will always use &apos;Skew Mode&apos; to rollup Hard Credit and Soft Credits for this record.</description>
        <inlineHelpText>When checked, Customizable Rollups will always use &apos;Skew Mode&apos; to rollup Hard Credit and Soft Credits for this record.</inlineHelpText>
        <label>Customizable Rollups: Force Skew Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Funding_Focus__c</fullName>
        <description>The general program area(s) that this organization funds.</description>
        <inlineHelpText>The general program area(s) that this organization funds.</inlineHelpText>
        <label>Funding Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Welfare</fullName>
                </value>
                <value>
                    <fullName>Arts and Culture</fullName>
                </value>
                <value>
                    <fullName>Capacity Building</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Health Services</fullName>
                </value>
                <value>
                    <fullName>Human Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Grantmaker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this organization is a grantmaking organization.</description>
        <inlineHelpText>Indicates that this organization is a grantmaking organization.</inlineHelpText>
        <label>Grantmaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Administrator_Name__c</fullName>
        <description>The name of the company&apos;s Matching Gift administrator.</description>
        <inlineHelpText>The name of the company&apos;s Matching Gift administrator.</inlineHelpText>
        <label>Matching Gift Administrator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Amount_Max__c</fullName>
        <description>The maximum amount the company will match on any single gift.</description>
        <inlineHelpText>The maximum amount the company will match on any single gift.</inlineHelpText>
        <label>Matching Gift Amount Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Amount_Min__c</fullName>
        <description>The smallest amount the company will match on any single gift.</description>
        <inlineHelpText>The smallest amount the company will match on any single gift.</inlineHelpText>
        <label>Matching Gift Amount Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Annual_Employee_Max__c</fullName>
        <description>The maximum amount the company will match each year for an employee.</description>
        <inlineHelpText>The maximum amount the company will match each year for an employee.</inlineHelpText>
        <label>Matching Gift Annual Employee Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Comments__c</fullName>
        <description>Additional notes about the company&apos;s Matching Gift program.</description>
        <inlineHelpText>Additional notes about the company&apos;s Matching Gift program.</inlineHelpText>
        <label>Matching Gift Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this company offers Matching Gifts.</description>
        <inlineHelpText>Indicates that this company offers Matching Gifts.</inlineHelpText>
        <label>Matching Gift Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Email__c</fullName>
        <description>Email of the company&apos;s Matching Gift administrator.</description>
        <inlineHelpText>Email of the company&apos;s Matching Gift administrator.</inlineHelpText>
        <label>Matching Gift Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Info_Updated__c</fullName>
        <description>The date you last updated the Matching Gift information.</description>
        <inlineHelpText>The date you last updated the Matching Gift information.</inlineHelpText>
        <label>Matching Gift Info Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Percent__c</fullName>
        <description>The portion of a gift the company will match.</description>
        <inlineHelpText>The portion of a gift the company will match.</inlineHelpText>
        <label>Matching Gift Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Phone__c</fullName>
        <description>The phone number of the company&apos;s Matching Gift administrator.</description>
        <inlineHelpText>The phone number of the company&apos;s Matching Gift administrator.</inlineHelpText>
        <label>Matching Gift Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Request_Deadline__c</fullName>
        <description>Use this field to note any age restrictions this company places on Matching Gift eligibility.</description>
        <inlineHelpText>Use this field to note any age restrictions this company places on Matching Gift eligibility.</inlineHelpText>
        <label>Matching Gift Request Deadline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Membership_Span__c</fullName>
        <description>The number of years that a member of this Household has had a Membership (read only).</description>
        <formula>year(npo02__MembershipEndDate__c ) - year(npo02__MembershipJoinDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of years that a member of this Household has had a Membership (read only).</inlineHelpText>
        <label>Membership Span</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Membership_Status__c</fullName>
        <description>The Membership status of this Household, for example, Current, Expired, or Grace Period. The value is based on Membership End Date and Grace Period. The Default Grace Period is set in NPSP Settings, under Household Settings. This field is read only.</description>
        <formula>if ( npo02__MembershipEndDate__c  &lt;today(), if (npo02__MembershipEndDate__c  &gt; ( TODAY() -
IF(NOT(ISNULL($Setup.npo02__Households_Settings__c.npo02__Membership_Grace_Period__c)), $Setup.npo02__Households_Settings__c.npo02__Membership_Grace_Period__c, 30)) , &quot;Grace Period&quot; , &quot;Expired&quot;) , if(isnull(npo02__MembershipEndDate__c ),&quot;&quot;,&quot;Current&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Membership status of this Household, for example, Current, Expired, or Grace Period. The value is based on Membership End Date and Grace Period. The Default Grace Period is set in NPSP Settings, under Household Settings. This field is read only.</inlineHelpText>
        <label>Membership Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Household_Members__c</fullName>
        <description>The number of Contacts who are members of this Household.</description>
        <inlineHelpText>The number of Contacts who are members of this Household.</inlineHelpText>
        <label>Number of Household Members</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Sustainer__c</fullName>
        <description>Indicates if this Account is an active, lapsed, or former recurring donor. The value is based on the Status of the related Recurring Donations.</description>
        <inlineHelpText>Indicates if this Account is an active, lapsed, or former recurring donor. The value is based on the Status of the related Recurring Donations.</inlineHelpText>
        <label>Sustainer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Lapsed</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Undeliverable_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the address is undeliverable.</description>
        <label>Undeliverable Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Household_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>npo02__Formal_Greeting__c</columns>
        <columns>npo02__Informal_Greeting__c</columns>
        <columns>npo02__TotalOppAmount__c</columns>
        <columns>npo02__AverageAmount__c</columns>
        <columns>npo02__Best_Gift_Year__c</columns>
        <columns>npo02__HouseholdPhone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.HH_Account</value>
        </filters>
        <label>Household Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>An Account representing a Household containing one or more individuals</description>
        <label>Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <description>An Account representing an organization</description>
        <label>Organization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>